feat and fix add and fix some model(metadata and productype) add register pages divide home pages divide product-details page and add query productType add some pageviewmodel, viewdata and some query grapghql change UI product details, product list and home pages. add some common components (ow-carousel, slideshow-gallery) change theme (header and footer) delete introduction pages

--- a/src/app/pages/authentication/login/login.component.html
+++ b/src/app/pages/authentication/login/login.component.html
@@ -30,7 +30,7 @@
         </div>
         <button type="submit" class="button-submit form-control">Đăng nhập</button>
         <div class="no-account">
-          Bạn chưa có tài khoản? <a>Tạo tài khoản</a>
+          Bạn chưa có tài khoản? <a routerLink="/register">Tạo tài khoản</a>
         </div>
       </form>
     </div>
