--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,5 @@
 <div class="home">
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="margin-bottom: 30px;">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
         <!-- <img src="..." class="d-block w-100" alt="..."> -->
@@ -22,7 +17,7 @@
             <div class="circle p-absolute">
             </div>
             <div class="circle p-absolute">
-              <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/beidou-emoji.png" alt="">
+              <img src="./../../../assets/images/beidou-emoji.png" alt="">
             </div>
           </div>
         </div>
@@ -43,7 +38,7 @@
             <div class="circle p-absolute">
             </div>
             <div class="circle p-absolute">
-              <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/beidou-emoji.png" alt="">
+              <img src="./../../../assets/images/beidou-emoji.png" alt="">
             </div>
           </div>
         </div>
@@ -64,7 +59,7 @@
             <div class="circle p-absolute">
             </div>
             <div class="circle p-absolute">
-              <img src="https://dung-kun.github.io/cheems-angular-web/images/beidou-emoji.png" alt="">
+              <img src="./../../../images/beidou-emoji.png" alt="">
             </div>
           </div>
         </div>
@@ -80,8 +75,9 @@
     </button>
   </div>
 
-
+  <app-hot-product></app-hot-product>
   <div class="container body-container">
+    <app-new-product></app-new-product>
     <div class="content">
       <div class="title">
         Các ứng dụng nổi bật
