--- a/src/app/theme/footer/footer.component.html
+++ b/src/app/theme/footer/footer.component.html
@@ -4,13 +4,21 @@
       <div class="col-lg-6">
         <a class="nav-link name__app" aria-current="page" href="#">CheemsStore</a>
         <div class="input-group mt-2">
-          <input type="text" class="form-control" placeholder="Enter Email Address">
-          <button class="btn button__search" type="button">Sign Up</button>
+          <input type="text" class="form-control" placeholder="Nhập địa chỉ Email">
+          <button class="btn button__search" type="button">Đăng ký</button>
         </div>
-        <p class="title__child__footer">Contact Info</p>
-        <p class="title__child__footer">KTX Khu A - DHQG - Dong Hoa - Di An - Thu Duc</p>
+        <p class="title__child__footer">Thông tin liên hệ</p>
+        <p class="title__child__footer">Địa chỉ: KTX Khu A - ĐHQG - Đông Hòa - Dĩ An - Bình Dương</p>
+        <p class="title__child__footer">
+          <a class="style-header-text" href="mailto:19521399@gmail.com">
+            Gmail: 19521399@gmail.com
+          </a>
+        </p>
+        <p class="title__child__footer">
+          Sđt: 0857550531
+        </p>
       </div>
-      <div class="col-lg-2">
+      <div class="col-lg-3">
         <p class="title__footer">
           Máy tính xách tay
         </p>
@@ -19,23 +27,14 @@
         <p class="title__child__footer">Legion</p>
         <p class="title__child__footer">Asus</p>
       </div>
-      <div class="col-lg-2">
+      <div class="col-lg-3">
         <p class="title__footer">
-          Đồ điện tử
+          Điện thoại
         </p>
-        <p class="title__child__footer">Nồi cơm điện</p>
-        <p class="title__child__footer">Quạt</p>
-        <p class="title__child__footer">Tủ lạnh</p>
-        <p class="title__child__footer">Lò vi sóng</p>
-      </div>
-      <div class="col-lg-2">
-        <p class="title__footer">
-          Phụ kiện
-        </p>
-        <p class="title__child__footer">Chuột</p>
-        <p class="title__child__footer">Bàn phím</p>
-        <p class="title__child__footer">Tai nghe</p>
-        <p class="title__child__footer">CPU</p>
+        <p class="title__child__footer">Galaxy</p>
+        <p class="title__child__footer">Redmi</p>
+        <p class="title__child__footer">Readme</p>
+        <p class="title__child__footer">Oppo</p>
       </div>
     </div>
   </div>
