--- a/src/app/theme/header/header.component.html
+++ b/src/app/theme/header/header.component.html
@@ -2,6 +2,7 @@
   <nav class="navbar nav__top">
     <div class="container">
       <div class="header-first">
+
         <a class="style-header-text" style="margin-right: 30px;" href="mailto:19521399@gmail.com">
           <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ic-message.svg" />
           <span>
@@ -15,13 +16,12 @@
             0857550531
           </span>
         </a>
-
         <div class="navbar__spacer"></div>
 
         <div>
           <ul class="navbar__nav">
             <li class="nav__item">
-              <a class="nav-link"  routerLink="/login">
+              <a class="nav-link" routerLink="/login">
                 <span style="margin: 0;">
                   Đăng nhập
                 </span>
@@ -29,17 +29,9 @@
               </a>
             </li>
 
-            <li class="nav__item">
-              <a class="nav-link" aria-current="page" href="#">
-                <span style="margin: 0;">
-                  Yêu thích
-                </span>
-                <i class="ai-heart"></i>
-              </a>
-            </li>
-
             <li class="nav__item" style="margin-right: 0px;">
               <a class="nav-link" aria-current="page" routerLink="/shopping-cart">
+                Giỏ hàng
                 <i class="ai-cart"></i>
               </a>
             </li>
@@ -54,8 +46,7 @@
     <div class="header-second">
       <nav class="navbar nav__botom">
         <a class="nav-link nav__item__header__bottom" aria-current="page" href="#">CheemsStore</a>
-        <a class="nav-link nav__item__bottom"  href="#">Trang chủ</a>
-        <a class="nav-link nav__item__bottom" routerLink="/introduction">Giới thiệu</a>
+        <a class="nav-link nav__item__bottom" href="#">Trang chủ</a>
         <a class="nav-link nav__item__bottom" routerLink="/product-list">Sản phẩm</a>
         <a class="nav-link nav__item__bottom" routerLink="/sales">Khuyến mãi</a>
         <a class="nav-link nav__item__bottom" href="#">Blog</a>
@@ -73,4 +64,3 @@
     </div>
   </div>
 </header>
-
