--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -11,87 +11,8 @@
   </div>
 
   <div class="m-common">
-    <div class="container border-shadow">
-      <div class="d-flex">
-        <div class="w-50">
-          <div class="carousel-image">
-            <div class="image-selected">
-              <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ganyu-1.png" class="rounded" alt="...">
-            </div>
-
-            <div class="image-list">
-              <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ganyu-1.png" class="rounded" alt="...">
-              <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ganyu-1.png" class="rounded" alt="...">
-              <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ganyu-1.png" class="rounded" alt="...">
-              <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ganyu-1.png" class="rounded" alt="...">
-              <!-- <button class="slideLeft" type="button">Slide left</button>
-              <button class="slideRight" type="button">Slide right</button> -->
-            </div>
-          </div>
-        </div>
-        <div class="w-50 details-text">
-          <div class="title">
-            Hutao
-          </div>
-          <div class="rate">
-            <i class="fa fa-star" style="color: yellow;"></i>
-            <i class="fa fa-star" style="color: yellow;"></i>
-            <i class="fa fa-star" style="color: yellow;"></i>
-            <i class="fa fa-star" style="color: yellow;"></i>
-            <i class="fa fa-star" style="color: yellow;"></i>
-            <span>(22)</span>
-          </div>
-          <div class="product-price">
-            $32.00 <span>$32.00</span>
-          </div>
-          <div class="description-short">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo neque odit quod quos odio, dignissimos
-            voluptatum labore, fugit aliquam facere earum doloribus cupiditate voluptatem laborum. Quas assumenda quos
-            earum veniam?
-          </div>
-
-          <div class="add-to-cart">
-            <button class="cart-button">
-              Thêm vào giỏ
-            </button>
-            <i class="fa fa-heart-o"></i>
-          </div>
-          <div class="item-style">
-            Loại: <span>ssss</span>
-          </div>
-
-          <div class="item-style">
-            Tag: <span>ssss</span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="description">
-      <div class="container">
-        <div class="title">
-          Mô tả
-        </div>
-        <div class="content">
-          <div class="content-title">
-            Xinh đẹp toẹt vời
-          </div>
-          <p class="content-details">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur eaque quae nihil facilis iusto officia vitae
-            dolores, maxime animi alias fugiat ullam labore ratione totam possimus neque sequi libero esse.
-          </p>
-        </div>
-
-        <div class="content">
-          <div class="content-title">
-            Xinh đẹp toẹt vời
-          </div>
-          <p class="content-details">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur eaque quae nihil facilis iusto officia vitae
-            dolores, maxime animi alias fugiat ullam labore ratione totam possimus neque sequi libero esse.
-          </p>
-        </div>
-      </div>
-    </div>
+    <app-product-introduction></app-product-introduction>
+    <app-product-description></app-product-description>
     <div class="related-product">
       <div class="container">
         <div class="title">
