update: - finish page address of personal-information page

--- a/src/app/pages/personal-information/child-components/personal-information-profile/personal-information-profile.component.scss
+++ b/src/app/pages/personal-information/child-components/personal-information-profile/personal-information-profile.component.scss
@@ -160,3 +160,16 @@
     }
   }
 }
+
+@media screen and (max-width: 1000px) {
+  .input_title {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    text-align: left;
+
+    .form-label {
+      margin-bottom: 0;
+    }
+  }
+}
