--- a/src/app/pages/personal-information/child-components/personal-information-side-nav/personal-information-side-nav.component.html
+++ b/src/app/pages/personal-information/child-components/personal-information-side-nav/personal-information-side-nav.component.html
@@ -6,7 +6,7 @@
   <div class="router-link-panel">
     <div class="link-container">
       <!-- Hồ sơ -->
-      <a class="link">
+      <a class="link" routerLink="/personal-information/profile" href="/personal-information/profile">
         <div class="link__icon">
           <img src="/assets/images/ic_profile.svg">
         </div>
@@ -17,20 +17,8 @@
     </div>
 
     <div class="link-container">
-      <!-- Ngân hàng -->
-      <a class="link">
-        <div class="link__icon">
-          <img src="/assets/images/ic_bank.svg">
-        </div>
-        <div class="link__text">
-          <span>Ngân hàng</span>
-        </div>
-      </a>
-    </div>
-
-    <div class="link-container">
       <!-- Địa chỉ -->
-      <a class="link">
+      <a class="link" routerLink="/personal-information/address" href="/personal-information/address">
         <div class="link__icon">
           <img src="/assets/images/ic_location.svg">
         </div>
@@ -42,7 +30,7 @@
 
     <div class="link-container">
       <!-- Đơn mua -->
-      <a class="link">
+      <a class="link" routerLink="/personal-information/receipt" href="/personal-information/receipt">
         <div class="link__icon">
           <img src="/assets/images/ic_bill.svg">
         </div>
