update: - finish template order page in personal-information page

--- a/src/app/pages/personal-information/personal-information.component.html
+++ b/src/app/pages/personal-information/personal-information.component.html
@@ -9,8 +9,8 @@
       </button>
       <div class="vertical-line"></div>
       <div class="title">
-        <div class="title__main">Hồ Sơ</div>
-        <div class="title__sub">Quản lí hồ sơ cá nhân</div>
+        <div class="title__main">{{ this.title }}</div>
+        <div class="title__sub">{{ this.subtitle }}</div>
       </div>
     </div>
     <div class="item">
