--- a/src/app/pages/personal-information/child-components/personal-information-order/child-components/order-filter-header/order-filter-header.component.html
+++ b/src/app/pages/personal-information/child-components/personal-information-order/child-components/order-filter-header/order-filter-header.component.html
@@ -28,6 +28,6 @@
 
   <div class="search-bar">
     <img src="/assets/images/ic_search.svg">
-    <input type="text" placeholder="Bạn có thể tìm kiếm sản phẩm ở dây">
+    <input type="text" placeholder="Mã hoá đơn">
   </div>
 </div>
