--- a/src/app/pages/personal-information/personal-information.component.scss
+++ b/src/app/pages/personal-information/personal-information.component.scss
@@ -53,13 +53,13 @@
         &__sub {
           margin-top: 3px;
           font-size: 20px;
-          line-height: 1.5rem;
+          line-height: 1.2rem;
         }
       }
     }
 
     .item {
-      padding: 1rem;
+      padding: 1rem 0;
     }
   }
 }
