--- a/src/app/pages/personal-information/child-components/personal-information-order/child-components/order-card/order-card.component.html
+++ b/src/app/pages/personal-information/child-components/personal-information-order/child-components/order-card/order-card.component.html
@@ -4,13 +4,28 @@
   </div>
   <div class="order-preview">
     <div class="main">
-      <label>Mã đơn:</label>
-      <label>Trạng thái:</label>
-      <label>Ngày mua:</label>
+      <div class="info">
+        <label>Mã đơn: </label>
+        <div class="text">Mã đơn hàng</div>
+      </div>
+      <div class="info">
+        <label>Trạng thái: </label>
+        <div class="text">trạng thái đơn</div>
+      </div>
+      <div class="info">
+        <label>Ngày mua: </label>
+        <div class="text">ngày mua hàng</div>
+      </div>
     </div>
     <div class="sub">
-      <label>Số sản phẩm:</label>
-      <label>Tổng tiền:</label>
+      <div class="info">
+        <label>Số lượng: </label>
+        <div class="text">số sản phẩm mua</div>
+      </div>
+      <div class="info">
+        <label>Tổng tiền: </label>
+        <div class="text">tổng tiền đơn</div>
+      </div>
     </div>
   </div>
 </div>
